--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     
 <meta name="robots" content="index, fol	low">
 <meta name="description" content="Компания CREATED BY DQMJRKAAA задает стандарт оказания услуг на рынке бетонных полов Беларуси. Полы, необходимые именно Вам. Весь спектр работ. Бонусы для наших клиентов">
-<script type="text/javascript" async="" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/analytics.js.download"></script><script type="text/javascript" async="" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/js"></script><script async="" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/tag.js.download"></script><script type="text/javascript" async="" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/ba.js.download"></script><script type="text/javascript">if(!window.BX)window.BX={};if(!window.BX.message)window.BX.message=function(mess){if(typeof mess==='object'){for(let i in mess) {BX.message[i]=mess[i];} return true;}};</script>
+<script type="text/javascript" async="" src="./analytics.js.download"></script><script type="text/javascript" async="" src="./js"></script><script async="" src="./tag.js.download"></script><script type="text/javascript" async="" src="./ba.js.download"></script><script type="text/javascript">if(!window.BX)window.BX={};if(!window.BX.message)window.BX.message=function(mess){if(typeof mess==='object'){for(let i in mess) {BX.message[i]=mess[i];} return true;}};</script>
 <script type="text/javascript">(window.BX||top.BX).message({'JS_CORE_LOADING':'Загрузка...','JS_CORE_NO_DATA':'- Нет данных -','JS_CORE_WINDOW_CLOSE':'Закрыть','JS_CORE_WINDOW_EXPAND':'Развернуть','JS_CORE_WINDOW_NARROW':'Свернуть в окно','JS_CORE_WINDOW_SAVE':'Сохранить','JS_CORE_WINDOW_CANCEL':'Отменить','JS_CORE_WINDOW_CONTINUE':'Продолжить','JS_CORE_H':'ч','JS_CORE_M':'м','JS_CORE_S':'с','JSADM_AI_HIDE_EXTRA':'Скрыть лишние','JSADM_AI_ALL_NOTIF':'Показать все','JSADM_AUTH_REQ':'Требуется авторизация!','JS_CORE_WINDOW_AUTH':'Войти','JS_CORE_IMAGE_FULL':'Полный размер'});</script>
 
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/core.js.download"></script>
+<script type="text/javascript" src="./core.js.download"></script>
 
 <script>BX.setJSList(['/bitrix/js/main/core/core_ajax.js','/bitrix/js/main/core/core_promise.js','/bitrix/js/main/polyfill/promise/js/promise.js','/bitrix/js/main/loadext/loadext.js','/bitrix/js/main/loadext/extension.js','/bitrix/js/main/polyfill/promise/js/promise.js','/bitrix/js/main/polyfill/find/js/find.js','/bitrix/js/main/polyfill/includes/js/includes.js','/bitrix/js/main/polyfill/matches/js/matches.js','/bitrix/js/ui/polyfill/closest/js/closest.js','/bitrix/js/main/polyfill/fill/main.polyfill.fill.js','/bitrix/js/main/polyfill/find/js/find.js','/bitrix/js/main/polyfill/matches/js/matches.js','/bitrix/js/main/polyfill/core/dist/polyfill.bundle.js','/bitrix/js/main/core/core.js','/bitrix/js/main/polyfill/intersectionobserver/js/intersectionobserver.js','/bitrix/js/main/lazyload/dist/lazyload.bundle.js','/bitrix/js/main/polyfill/core/dist/polyfill.bundle.js','/bitrix/js/main/parambag/dist/parambag.bundle.js']);
 BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/main/parambag/dist/parambag.bundle.css']);</script>
@@ -30,11 +30,11 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link href="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/css2" rel="stylesheet">
-    <link href="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/css2(1)" rel="stylesheet">
-    <link rel="stylesheet" href="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/bootstrap.css">
-    <link rel="stylesheet" href="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/style.css">
-	<link rel="stylesheet" href="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/new-style.css">
+    <link href="./css2" rel="stylesheet">
+    <link href="./css2(1)" rel="stylesheet">
+    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./new-style.css">
     <!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="/img/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src="/js/html5shiv.min.js"></script>
@@ -48,7 +48,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
 <meta name="yandex-verification" content="00eee410728c51e0">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async="" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/js(1)"></script>
+<script async="" src="./js(1)"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -85,8 +85,8 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
           </div>
           <div class="info_item info_last">
             <div class="tel_icon">
-				<a href="https://t.me/atera_by_Belarus_bot"><img src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/tg.svg"></a>
-                <a href="viber://pa?chatURI=atera_by_belarus_bot"><img src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/viber.svg"></a>
+				<a href="https://t.me/atera_by_Belarus_bot"><img src="./tg.svg"></a>
+                <a href="viber://pa?chatURI=atera_by_belarus_bot"><img src="./viber.svg"></a>
             </div>
             <div class="tel">
               <a class="menu_link" href="tel:+375 (29) 1111-404">+375 (29) 1111-404</a>
@@ -95,7 +95,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
           </div>
         </div>
         <div class="header_nav">
-			<a class="logo_link" href="https://www.youtube.com/@Dqmjrkaaa"><img class="logo_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/masya.jpg"></a>
+			<a class="logo_link" href="https://www.youtube.com/@Dqmjrkaaa"><img class="logo_img" src="./masya.jpg"></a>
           <nav>
             <ul class="nav_list">
               <li class="nav_item">
@@ -123,7 +123,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
 
         <div class="header_mobile">
           <div class="logo_wrap">
-			  <a class="logo_link" href="https://www.youtube.com/@Dqmjrkaaa"><img class="logo_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/masya.jpg"></a>
+			  <a class="logo_link" href="https://www.youtube.com/@Dqmjrkaaa"><img class="logo_img" src="./masya.jpg"></a>
           </div>
           <div class="header_mobile_tel_button">
             <a class="header_mobile_tel" href="tel:+375 (29) 1111-404">+375 (29) 1111-404</a>
@@ -161,8 +161,8 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
 
                 <div class="info_item">
                   <div class="tel_icon">
-					<a href="https://t.me/atera_by_Belarus_bot"><img src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/tg.svg"></a>
-                    <a href="viber://pa?chatURI=atera_by_belarus_bot"><img src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/viber.svg"></a>
+					<a href="https://t.me/atera_by_Belarus_bot"><img src="./tg.svg"></a>
+                    <a href="viber://pa?chatURI=atera_by_belarus_bot"><img src="./viber.svg"></a>
                   </div>
                   <div class="tel">
                     <a class="menu_link" href="tel:+375 (29) 336-10-42">+375 (29) 1111-404</a>
@@ -233,15 +233,15 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
             </p>
             <a class="btn2" href="https://atera.by/services/concrete-floors/">Узнать подробности</a>
           </div>
-          <img class="services_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/Industrial-concrete-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
-          <img class="services_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/Industrial-polymer-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
+          <img class="services_img" src="./Industrial-concrete-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
+          <img class="services_img" src="./Industrial-polymer-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
           <div class="services_card">
             <h3 class="services_name h3">Полимерные полы</h3>
             <p class="services_description">
               Для объектов подверженных воздействию химически агрессивных сред, постоянным ударным
               нагрузкам, активному движению транспорта, удовлетворяет любым санитарным требованиям
             </p>
-            <a class="btn2" href="https://atera.by/services/polymer-floors/">Узнать подробности</a>
+            <a class="btn2" href="https://www.youtube.com/@Dqmjrkaaa">Узнать подробности</a>
           </div>
           <div class="services_card">
             <h3 class="services_name h3">Полы для площадок и паркингов</h3>
@@ -249,10 +249,10 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
               Для эксплуатации под открытым небом, выдерживают воздействия перепадов температуры,
               процессы заморозки/разморозки, воздействие "дорожной" химии
             </p>
-            <a class="btn2" href="https://atera.by/services/playgrounds-and-parking-lots/">Узнать подробности</a>
+            <a class="btn2" href="https://www.youtube.com/@Dqmjrkaaa">Узнать подробности</a>
           </div>
-          <img class="services_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/Concrete-platforms-parking-lots.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
-          <img class="services_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/Repair-restoration-of-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
+          <img class="services_img" src="./Concrete-platforms-parking-lots.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
+          <img class="services_img" src="./Repair-restoration-of-floors.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
           <div class="services_card">
             <h3 class="services_name h3">Ремонт и реставрация полов</h3>
             <p class="services_description">
@@ -260,7 +260,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
               отслоений. Несвоевременный ремонт полов может привести к образованию большего
               количества дефектов.
             </p>
-            <a class="btn2" href="https://atera.by/services/renovation-and-restoration/">Узнать подробности</a>
+            <a class="btn2" href="https://www.youtube.com/@Dqmjrkaaa">Узнать подробности</a>
           </div>
           <div class="services_card">
             <h3 class="services_name h3">Полы для частных домов и гаражей</h3>
@@ -270,7 +270,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
             </p>
             <a class="btn2" href="https://atera.by/services/private-houses-and-garages/">Узнать подробности</a>
           </div>
-          <img class="services_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/Floors-in-private-houses-garages.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
+          <img class="services_img" src="./Floors-in-private-houses-garages.jpg" alt="Промышленные бетонные полы от компании CREATED BY DQMJRKAAA">
         </div>
       </section>
 
@@ -281,7 +281,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
           <div class="why_we_cards_wrap">
             <div class="why_we_cards">
               <div class="why_we_card">
-                <img class="why_we_icon" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/lupa.svg" alt="icon">
+                <img class="why_we_icon" src="./lupa.svg" alt="icon">
                 <h5 class="why_we_name h5">Производим проверку проектных решений</h5>
                 <p class="why_we_description">
                   Экспертный анализ проектной документации, приведение в соответствие с требованиями
@@ -289,7 +289,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
                 </p>
               </div>
               <div class="why_we_card">
-                <img class="why_we_icon" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/details.svg" alt="icon">
+                <img class="why_we_icon" src="./details.svg" alt="icon">
                 <h5 class="why_we_name h5">Внимательно относимся к деталям работы</h5>
                 <p class="why_we_description">
                   Учитываем технические требования и специфические условия объекта перед расчетом
@@ -297,7 +297,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
                 </p>
               </div>
               <div class="why_we_card">
-                <img class="why_we_icon" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/hards.svg" alt="icon">
+                <img class="why_we_icon" src="./hards.svg" alt="icon">
                 <h5 class="why_we_name h5">
                   Выполняем работы<br>
                   любой сложности
@@ -308,7 +308,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
                 </p>
               </div>
               <div class="why_we_card">
-                <img class="why_we_icon" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/diamond.svg" alt="icon">
+                <img class="why_we_icon" src="./diamond.svg" alt="icon">
                 <h5 class="why_we_name h5">Бесплатно полируем пол</h5>
                 <p class="why_we_description">
                   Бесплатно полируем бетон для улучшения внешнего вида, повышения прочности и
@@ -316,7 +316,7 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
                 </p>
               </div>
               <div class="why_we_card">
-                <img class="why_we_icon" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/clean.svg" alt="icon">
+                <img class="why_we_icon" src="./clean.svg" alt="icon">
                 <h5 class="why_we_name h5">Проводим уборку помещения</h5>
                 <p class="why_we_description">
                   Проводим уборку помещения после проведения работ и оставляем его полностью готовым
@@ -436,12 +436,12 @@ BX.setCSSList(['/bitrix/js/main/lazyload/dist/lazyload.bundle.css','/bitrix/js/m
           <div class="portfolio_items" style="transform: translateX(0px);">
 				                	
             <div class="portfolio_item">
-              <img class="portfolio_item_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/TopinPols.jpg" alt="Склад сыпучих материалов" draggable="false">
+              <img class="portfolio_item_img" src="./TopinPols.jpg" alt="Склад сыпучих материалов" draggable="false">
               <div class="portfolio_item_info">
                 <p class="portfolio_item_name">Топинговые полы – бетонные полы с топингом</p>
             </div>
 			           <div class="portfolio_item">
-              <img class="portfolio_item_img" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/BetonBprom.jpg" alt="Склад сыпучих материалов" draggable="false">
+              <img class="portfolio_item_img" src="./BetonBprom.jpg" alt="Склад сыпучих материалов" draggable="false">
               <div class="portfolio_item_info">
                 <p class="portfolio_item_name">Бетонные полы в промышленности</p>
             </div>
@@ -881,15 +881,15 @@ function BXMapYandexAfterShow(mapId)
 <!-- Global Mailform Output-->
 <div class="snackbars" id="form-output-global"></div>
 <!-- Javascript-->
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/core.min.js.download"></script>
+<script type="text/javascript" src="./core.min.js.download"></script>
 
 
-<script src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/jquery-ui.min.js.download"></script>
+<script src="./jquery-ui.min.js.download"></script>
 
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/cocoen.js.download"></script>
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/jquery.maskedinput.min.js.download"></script>
+<script type="text/javascript" src="./cocoen.js.download"></script>
+<script type="text/javascript" src="./jquery.maskedinput.min.js.download"></script>
 
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/script.js.download"></script>
-<script type="text/javascript" src="./Промышленные полы. Бетонные и полимерные полы в Минске и РБ_files/portfolio.js.download"></script>
+<script type="text/javascript" src="./script.js.download"></script>
+<script type="text/javascript" src="./portfolio.js.download"></script>
 
 <a href="https://atera.by/#" id="ui-to-top" class="ui-to-top"></a></body></html>
